# ClassroomStudio

./: .gitignore  CLAUDE.md
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/models/: schemas.py
backend/app/routers/: analysis.py
backend/app/services/: convex_service.py  gemini_analysis_service.py  gemini_service.py  pdf_service.py
frontend/: README.md  package.json  pnpm-lock.yaml
frontend/convex/: aiAnalyses.ts  announcements.ts  assignments.ts  classrooms.ts  files.ts  http.ts  members.ts  permissions.ts  schema.ts  submissions.ts
frontend/convex/_generated/: api.d.ts
frontend/src/app/: SignIn.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/classrooms/: page.tsx
frontend/src/app/classrooms/[id]/: layout.tsx  page.tsx
frontend/src/app/classrooms/[id]/assignments/[assignmentId]/: page.tsx
frontend/src/app/classrooms/[id]/classwork/: page.tsx
frontend/src/app/classrooms/[id]/grades/: page.tsx
frontend/src/app/classrooms/[id]/people/: page.tsx
frontend/src/app/classrooms/[id]/settings/: page.tsx
frontend/src/app/classrooms/[id]/stream/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/classroom/: AssignmentCard.tsx  AssignmentDetailsModal.tsx  ClassroomBanner.tsx  ClassroomHeader.tsx  ClassroomTabs.tsx  CreateAnnouncementModal.tsx  CreateAssignmentModal.tsx  EditAssignmentModal.tsx  MembersList.tsx  StreamPost.tsx  SubmissionModal.tsx
frontend/src/components/ui/: auth-navbar-wrapper.tsx  badge.tsx  file-display.tsx  file-upload.tsx  loading.tsx  navbar.tsx
